--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "solarsystem",
   "version": "1.0.0",
   "description": "a 3d scene showing the solar system on canvas",
-  "main": "index.js",
+  "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node node/start.js",
-    "generatetexture": "node "
+    "start": "webpack-dev-server  --config config/webpack.config.js",
+    "update:config": "node ./scripts/objectgenerate.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,22 @@
   },
   "homepage": "https://github.com/ShirleyyYan/SolarSystem#readme",
   "dependencies": {
-    "babylonjs": "^3.1.0-beta1.1.1",
+    "babylonjs": "^3.2.0-alphaB",
+    "beautify": "0.0.8",
+    "fs": "0.0.1-security",
     "jquery": "^3.2.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "xlsx": "^0.11.17"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^4.4.1",
+    "css-loader": "^0.28.9",
+    "html-webpack-plugin": "^2.30.1",
+    "json-beautify": "^1.0.1",
+    "json-loader": "^0.5.7",
+    "path": "^0.12.7",
+    "style-loader": "^0.20.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
